[package]
name = "rvm"
version = "1.0.0"
authors = ["Yuekai Jia <equation618@gmail.com>"]
edition = "2021"
description = "A Type-1.5 hypervisor written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
intel = ["libvmm/vmx"]
amd = ["libvmm/svm"]
stats = []

[dependencies]
log = "0.4"
spin = "0.7"
bitflags = "1.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"
buddy_system_allocator = "0.8"
libvmm = { path = "./crates/libvmm", default-features = false }
uart_16550 = { path = "./crates/uart_16550" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.44"
x86_64 = "0.14"
raw-cpuid = "10.2"
